src/test/ui/in-band-lifetimes/elided-lifetimes.stderr
error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetimes.rs:13:12
   |
LL | fn foo(x: &Foo) {
   |            ^^^- help: indicate the anonymous lifetime: `<'_>`
   |
note: lint level defined here
  --> $DIR/elided-lifetimes.rs:5:9
   |
LL | #![deny(elided_lifetimes_in_paths)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetimes.rs:32:29
   |
LL | fn wrap_gift(gift: &str) -> Wrapped {
   |                             ^^^^^^^- help: indicate the anonymous lifetime: `<'_>`

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetimes.rs:38:38
   |
LL | fn wrap_gift_with_bow(gift: &str) -> WrappedWithBow {
   |                                      ^^^^^^^^^^^^^^- help: indicate the anonymous lifetime: `<'_>`

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetimes.rs:44:29
   |
LL | fn inspect_matched_set(set: MatchedSet) {
   |                             ^^^^^^^^^^- help: indicate the anonymous lifetimes: `<'_, '_>`

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetimes.rs:56:36
   |
LL |         fn $fn_name(gift: &str) -> $type_name {
   |                                    ^^^^^^^^^^- help: indicate the anonymous lifetime: `<'_>`
...
LL | autowrapper!(Autowrapped, autowrap_gift, 'a);
   | --------------------------------------------- in this macro invocation

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetimes.rs:78:18
   |
LL |     let loyalty: Ref<(u32, char)> = honesty.borrow();
   |                  ^^^^^^^^^^^^^^^^ help: indicate the anonymous lifetime: `Ref<'_, (u32, char)>`

error: hidden lifetime parameters in types are deprecated
  --> $DIR/elided-lifetimes.rs:70:9
   |
LL |         Ref<($($types),*)>
   |         ^^^^^^^^^^^^^^^^^^ help: indicate the anonymous lifetime: `Ref<'_, ($($types),*)>`
...
LL |     let yellow: anytuple_ref_ty!(bool, &str) = laughter.borrow();
   |                 ---------------------------- in this macro invocation

error: aborting due to 7 previous errors

